Incorrect modifier object target after making duplicates real for instanced collections #64266

Closed
opened 2019-05-07 20:04:33 +02:00 by Artem · 7 comments

System Information
Operating system: W10
Graphics card: GTX 1080TI

Blender Version
Broken: blender-2.80-bfef3bce1a93
Worked: 2.79b

Short description of error
If you have objects with array or curve modifier (maybe other modifiers too, i haven't checked them all) and have them instanced and mirrored, you get an incorrect target for these modifiers if you make the instances real (Ctrl+A)

Exact steps for others to reproduce the error
Ctrl+A make duplicates real and see how instanced objects with modifiers get same targets as original objects
Sample.blend

**System Information** Operating system: W10 Graphics card: GTX 1080TI **Blender Version** Broken: blender-2.80-bfef3bce1a93 Worked: 2.79b **Short description of error** If you have objects with array or curve modifier (maybe other modifiers too, i haven't checked them all) and have them instanced and mirrored, you get an incorrect target for these modifiers if you make the instances real (Ctrl+A) **Exact steps for others to reproduce the error** Ctrl+A make duplicates real and see how instanced objects with modifiers get same targets as original objects [Sample.blend](https://archive.blender.org/developer/F7013194/Sample.blend)
Author

Added subscriber: @Hickz

Added subscriber: @Hickz
Sergey Sharybin was assigned by Sebastian Parborg 2019-05-08 11:41:28 +02:00
Sergey Sharybin removed their assignment 2019-05-08 14:10:49 +02:00
Bastien Montagne was assigned by Sergey Sharybin 2019-05-08 14:10:49 +02:00

Added subscribers: @mont29, @Sergey

Added subscribers: @mont29, @Sergey

@mont29, seems this is actually ID management here, where you're the master ninja :) (from original discussion with Sebastian thought it's something to do with wrong orig vs. eval access, but after closer look it seems to be something else)

@mont29, seems this is actually ID management here, where you're the master ninja :) (from original discussion with Sebastian thought it's something to do with wrong orig vs. eval access, but after closer look it seems to be something else)

This issue was referenced by 44d4fdec7e

This issue was referenced by 44d4fdec7efd2ff6549cf79b7a66a912e00a5d3f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Guys, i think you broke something with this fix :D check this thread out

https://developer.blender.org/T64399

Guys, i think you broke something with this fix :D check this thread out https://developer.blender.org/T64399

Crashed is caused by 901026c493, not 44d4fdec7e…

Crashed is caused by 901026c493, not 44d4fdec7e…
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64266
No description provided.