Fix T64266: Incorrect modifier object target after making duplicates real for instanced collections.

Not sure why newid was set in evaluated object instead of orig one,
makes no sense to me, since we want to operate remapping of ID pointers
on orig data? Looks like that was something overseen when that code was
ported to new COW system.